Working indexed slot map